# plume

./: .gitignore  LICENSE  README.md  compile-arm.sh  hello.plm  hie.yaml  notes.md  package.yaml  plume.cabal  stack.yaml
deprecated/: VirtualMachine.hs
ex/: hello.plm  many_ifs.plm
src/: Bytecode.hs  BytecodeGen.hs  FirstIntermediate.hs  Lexer.hs  LiveAnalysis.hs  LiveIntervals.hs  Main.hs  Parser.hs  SemanticError.hs  Semantics.hs  ShowBytecode.hs  SymbolTable.hs  Syntax.hs  VirtualMachine.hs
src/Bytecode/: Bytecode.hs  BytecodeGen.hs  Generation.hs  Show.hs  ShowBytecode.hs  Types.hs
src/CodeGen/ARM/: Emit.hs  RegAlloc.hs
src/CodeGen/Wasm/: Emit.hs  Translation.hs  Types.hs
src/Ir/: Tac.hs
src/Ir/Cfg/: Translation.hs  Types.hs
src/Ir/Tac/: Translation.hs  Types.hs
src/Parsing/: Lexer.hs  Parser.hs  Syntax.hs
src/RegAlloc/: LinearScan.hs  LiveIntervals.hs  Shared.hs  Simple.hs
src/Semantics/: Error.hs  SemanticError.hs  SymbolTable.hs  Validation.hs
src/VirtualMachine/: VirtualMachine.hs
src/Wasm/: Emit.hs  Translation.hs  Types.hs
src/X8664/: StackExpansion.hs
