name:                plume
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/e-hat/plume
license:             MIT
license-file:        LICENSE
author:              Eddie Hatfield
maintainer:          edward.hatfield@tufts.edu
copyright:           2021 Eddie Hatfield
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable plume
  hs-source-dirs:      src
  other-modules:       Syntax Parser Lexer Semantics SemanticError
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       pretty-show,
                       optparse-applicative,
                       containers

